Name:                Lamdu
Version:             0.1
Synopsis:            A next generation IDE
Description:         Lamdu functional programming editor
License:             GPL
License-file:        LICENSE
Author:              Eyal Lotem, Yair Chuchem
Maintainer:          eyal.lotem@gmail.com, yairchu@gmail.com
Homepage:            http://www.lamdu.org
Category:            Graphics
Build-type:          Simple
Cabal-version:       >= 1.10
Data-dir:            data
Data-files:          fonts/DejaVuSans.ttf
                   , fonts/DejaVuSans-Bold.ttf
                   , fonts/DejaVuSansMono.ttf
                   , fonts/DejaVuSerif.ttf
                   , fonts/DejaVuSerif-BoldItalic.ttf
                   , fonts/DejaVuSerif-Italic.ttf
                   , fonts/Purisa.ttf
                   , config.json
                   , themes/default.json
                   , themes/light.json
                   , themes/retro.json
                   , freshdb.json
                   , js/README
                   , js/anchors.js
                   , js/protocol.js
                   , js/rts.js
                   , js/rtsConfig.js
                   , js/export/rtsConfig.js
                   , doc/JSExportReadMe.md

source-repository head
  type: git
  location: https://github.com/lamdu/lamdu.git

Flag ekg
  description: Enable ekg support in Lamdu
  default: True

Executable lamdu
  main-is: Lamdu/Main.hs
  hs-source-dirs: src/main
  default-extensions: NoImplicitPrelude, OverloadedStrings, PartialTypeSignatures, LambdaCase, DeriveTraversable, DeriveGeneric
  default-language: Haskell2010
  build-depends: Lamdu, base, directory, process, template-haskell, time, base-compat
  ghc-options: -O2 -Wall -Widentities -Wimplicit-prelude -Wmissing-home-modules -Wincomplete-patterns -Wnoncanonical-monad-instances -Wsemigroup -Wincomplete-record-updates -Wredundant-constraints -threaded
  ghc-prof-options: -fprof-auto -fprof-cafs -rtsopts
  if flag(ekg)
    ghc-options: -with-rtsopts=-T
  other-modules: Lamdu.Version
               , System.Process.Git

Test-Suite Tests
  type: exitcode-stdio-1.0
  default-extensions: NoImplicitPrelude, OverloadedStrings, PartialTypeSignatures, LambdaCase, DeriveTraversable, DeriveGeneric
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Tests.hs
  other-modules: Test.Lamdu.Db
               , Test.Lamdu.FreshDb
               , Test.Lamdu.Gui
               , Test.Lamdu.GuiEnv
               , Test.Lamdu.Instances
               , Test.Lamdu.Prelude
               , Test.Lamdu.Sugar
               , Test.Lamdu.SugarStubs
               , Test.Lamdu.Theme
               , Tests.AnimIdClash
               , Tests.Codec
               , Tests.ColorSchemes
               , Tests.Config
               , Tests.DataFiles
               , Tests.EventMap
               , Tests.Gui
               , Tests.JsExport
               , Tests.JsRtsTags
               , Tests.Momentu
               , Tests.Names
               , Tests.Nix
               , Tests.Precedence
               , Tests.Readme
               , Tests.Stdlib
               , Tests.Sugar
               , Tests.ValUtils
               , Tests.WidgetGlue
  build-depends:
      base, HUnit, test-framework, test-framework-hunit, test-framework-quickcheck2
    , aeson-diff, deepseq, deepseq-generics, generic-random, lens-aeson, QuickCheck, split, yaml
    , Lamdu, AlgoW, lamdu-calculus, syntax-tree, nodejs-exec
    , aeson, aeson-pretty, bytestring, containers, directory, filepath, GLFW-b
    , lens, List, mtl, pretty, process, random, text, uuid-types, Cabal
  ghc-options: -O2 -Wall -Widentities -Wimplicit-prelude -Wmissing-home-modules -Wincomplete-patterns -Wnoncanonical-monad-instances -Wsemigroup -Wincomplete-record-updates -Wredundant-constraints -threaded
  ghc-prof-options: -fprof-auto -fprof-cafs -rtsopts

Library
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude, OverloadedStrings, PartialTypeSignatures, LambdaCase, DeriveTraversable, DeriveGeneric
  build-depends:    AlgoW
                  , aeson >= 1.1
                  , aeson-pretty
                  , ansi-wl-pprint
                  , base >= 4.7
                  , base-compat >= 0.8.2 && < 0.11
                  , base-orphans >= 0.5.0
                  , base16-bytestring
                  , binary >= 0.7
                  , bytestring
                  , containers >= 0.4
                  , constraints
                  , data-default >= 0.5
                  , deepseq
                  , deepseq-generics >= 0.1
                  , directory >= 1.0.1.1
                  , ekg-core
                  , filepath >= 1.1
                  , edit-distance
                  , GLFW-b >= 3.2.1.2
                  , graphics-drawingcombinators >= 1.7.1
                  , hashable
                  , lamdu-calculus < 0.2
                  , language-ecmascript >= 0.18
                  , lens >= 4.1
                  , lens-aeson
                  , leveldb-haskell >= 0.6
                  , List >= 0.5.1
                  , mtl >= 2.2
                  , nodejs-exec
                  , OpenGL
                  , optparse-applicative >= 0.12
                  , pretty >=1.1.2 && <1.2
                  , process
                  , random >= 1.0.0
                  , safe-exceptions >= 0.1.4
                  , split
                  , StateVar
                  , stm
                  , syntax-tree
                  , temporary
                  , text
                  , time >= 1.2
                  , timeit
                  , transformers >= 0.4.3
                  , unordered-containers
                  , uuid >= 1.3
                  , uuid-types >= 1.0
                  , vector
                  , zip-archive
                  , cryptohash-sha256
                  , executable-path

  exposed-modules:  Control.Concurrent.Extended
                  , Control.Lens.Extended
                  , Control.Monad.Trans.Except.Extended
                  , Control.Monad.Trans.FastRWS
                  , Control.Monad.Trans.FastWriter
                  , Control.Monad.Transaction
                  , Control.Monad.Unit
                  , Data.Aeson.Config
                  , Data.Binary.Extended
                  , Data.ByteString.Extended
                  , Data.Cache.Fenced
                  , Data.CurAndPrev
                  , Data.Function.Decycle
                  , Data.IORef.Extended
                  , Data.List.Extended
                  , Data.MMap
                  , Data.MRUMemo
                  , Data.Map.Extended
                  , Data.Maybe.Extended
                  , Data.Monoid.Generic
                  , Data.Property
                  , Data.Set.Ordered
                  , Data.UUID.Utils
                  , Data.Vector.Vector2
                  , Foreign.C.Types.Instances
                  , GUI.Momentu
                  , GUI.Momentu.Align
                  , GUI.Momentu.Animation
                  , GUI.Momentu.Animation.Engine
                  , GUI.Momentu.Animation.Id
                  , GUI.Momentu.Direction
                  , GUI.Momentu.Draw
                  , GUI.Momentu.Draw.FPS
                  , GUI.Momentu.Element
                  , GUI.Momentu.EventMap
                  , GUI.Momentu.FocusDirection
                  , GUI.Momentu.Font
                  , GUI.Momentu.Glue
                  , GUI.Momentu.Hover
                  , GUI.Momentu.Main
                  , GUI.Momentu.Main.Animation
                  , GUI.Momentu.Main.Events
                  , GUI.Momentu.Main.Events.Loop
                  , GUI.Momentu.Main.Types
                  , GUI.Momentu.MetaKey
                  , GUI.Momentu.ModKey
                  , GUI.Momentu.Rect
                  , GUI.Momentu.Render
                  , GUI.Momentu.Responsive
                  , GUI.Momentu.Responsive.Expression
                  , GUI.Momentu.Responsive.Options
                  , GUI.Momentu.Scroll
                  , GUI.Momentu.State
                  , GUI.Momentu.Test
                  , GUI.Momentu.View
                  , GUI.Momentu.Widget
                  , GUI.Momentu.Widget.Id
                  , GUI.Momentu.Widget.Instances
                  , GUI.Momentu.Widget.Types
                  , GUI.Momentu.Widgets.Choice
                  , GUI.Momentu.Widgets.Cursor
                  , GUI.Momentu.Widgets.EventMapHelp
                  , GUI.Momentu.Widgets.FocusDelegator
                  , GUI.Momentu.Widgets.Grid
                  , GUI.Momentu.Widgets.GridView
                  , GUI.Momentu.Widgets.Label
                  , GUI.Momentu.Widgets.Menu
                  , GUI.Momentu.Widgets.Menu.Search
                  , GUI.Momentu.Widgets.Spacer
                  , GUI.Momentu.Widgets.StdKeys
                  , GUI.Momentu.Widgets.TextEdit
                  , GUI.Momentu.Widgets.TextEdit.Property
                  , GUI.Momentu.Widgets.TextView
                  , GUI.Momentu.Zoom
                  , Graphics.DrawingCombinators.Extended
                  , Graphics.UI.GLFW.Instances
                  , Graphics.UI.GLFW.Utils
                  , Lamdu.Builtins.Anchors
                  , Lamdu.Builtins.PrimVal
                  , Lamdu.Cache
                  , Lamdu.Calc.Term.Utils
                  , Lamdu.CharClassification
                  , Lamdu.Config
                  , Lamdu.Config.Sampler
                  , Lamdu.Config.Theme
                  , Lamdu.Config.Theme.Fonts
                  , Lamdu.Config.Theme.Name
                  , Lamdu.Config.Theme.TextColors
                  , Lamdu.Config.Theme.ValAnnotation
                  , Lamdu.Data.Anchors
                  , Lamdu.Data.Db
                  , Lamdu.Data.Db.Init
                  , Lamdu.Data.Db.Layout
                  , Lamdu.Data.Db.Migration
                  , Lamdu.Data.Definition
                  , Lamdu.Data.Export.JS
                  , Lamdu.Data.Export.JSON
                  , Lamdu.Data.Export.JSON.Codec
                  , Lamdu.Data.Export.JSON.Migration
                  , Lamdu.Data.Export.JSON.Migration.Common
                  , Lamdu.Data.Export.JSON.Migration.ToVersion1
                  , Lamdu.Data.Export.JSON.Migration.ToVersion2
                  , Lamdu.Data.Export.JSON.Migration.ToVersion3
                  , Lamdu.Data.Export.JSON.Migration.ToVersion4
                  , Lamdu.Data.Export.JSON.Migration.ToVersion5
                  , Lamdu.Data.Export.JSON.Migration.ToVersion6
                  , Lamdu.Data.Export.JSON.Migration.ToVersion7
                  , Lamdu.Data.Export.JSON.Migration.ToVersion8
                  , Lamdu.Data.Meta
                  , Lamdu.Data.Ops
                  , Lamdu.Data.Ops.Subexprs
                  , Lamdu.Data.Tag
                  , Lamdu.Debug
                  , Lamdu.Debug.Tasks
                  , Lamdu.Editor
                  , Lamdu.Editor.Exports
                  , Lamdu.Editor.Fonts
                  , Lamdu.Editor.Settings
                  , Lamdu.Eval.JS
                  , Lamdu.Eval.JS.Compiler
                  , Lamdu.Eval.JS.Types
                  , Lamdu.Eval.Manager
                  , Lamdu.Eval.Results
                  , Lamdu.Eval.Results.Process
                  , Lamdu.Expr.GenIds
                  , Lamdu.Expr.IRef
                  , Lamdu.Expr.Load
                  , Lamdu.Expr.UniqueId
                  , Lamdu.Font
                  , Lamdu.Formatting
                  , Lamdu.Fuzzy
                  , Lamdu.GUI.CodeEdit
                  , Lamdu.GUI.CodeEdit.GotoDefinition
                  , Lamdu.GUI.CodeEdit.Load
                  , Lamdu.GUI.DefinitionEdit
                  , Lamdu.GUI.EvalView
                  , Lamdu.GUI.ExpressionEdit
                  , Lamdu.GUI.ExpressionEdit.ApplyEdit
                  , Lamdu.GUI.ExpressionEdit.AssignmentEdit
                  , Lamdu.GUI.ExpressionEdit.BinderEdit
                  , Lamdu.GUI.ExpressionEdit.BuiltinEdit
                  , Lamdu.GUI.ExpressionEdit.CaseEdit
                  , Lamdu.GUI.ExpressionEdit.Dotter
                  , Lamdu.GUI.ExpressionEdit.EventMap
                  , Lamdu.GUI.ExpressionEdit.FragmentEdit
                  , Lamdu.GUI.ExpressionEdit.GetFieldEdit
                  , Lamdu.GUI.ExpressionEdit.GetVarEdit
                  , Lamdu.GUI.ExpressionEdit.IfElseEdit
                  , Lamdu.GUI.ExpressionEdit.HoleEdit
                  , Lamdu.GUI.ExpressionEdit.HoleEdit.ResultGroups
                  , Lamdu.GUI.ExpressionEdit.HoleEdit.ResultWidget
                  , Lamdu.GUI.ExpressionEdit.HoleEdit.SearchArea
                  , Lamdu.GUI.ExpressionEdit.HoleEdit.ValTerms
                  , Lamdu.GUI.ExpressionEdit.HoleEdit.WidgetIds
                  , Lamdu.GUI.ExpressionEdit.InjectEdit
                  , Lamdu.GUI.ExpressionEdit.LambdaEdit
                  , Lamdu.GUI.ExpressionEdit.LiteralEdit
                  , Lamdu.GUI.ExpressionEdit.NomEdit
                  , Lamdu.GUI.ExpressionEdit.RecordEdit
                  , Lamdu.GUI.ExpressionEdit.TagEdit
                  , Lamdu.GUI.ExpressionGui.Annotation
                  , Lamdu.GUI.ExpressionGui.Monad
                  , Lamdu.GUI.ExpressionGui.Payload
                  , Lamdu.GUI.ExpressionGui.Wrap
                  , Lamdu.GUI.IOTrans
                  , Lamdu.GUI.LightLambda
                  , Lamdu.GUI.Main
                  , Lamdu.GUI.NameView
                  , Lamdu.GUI.ParamEdit
                  , Lamdu.GUI.PresentationModeEdit
                  , Lamdu.GUI.ReplEdit
                  , Lamdu.GUI.Settings
                  , Lamdu.GUI.StatusBar
                  , Lamdu.GUI.StatusBar.Common
                  , Lamdu.GUI.Styled
                  , Lamdu.GUI.TypeView
                  , Lamdu.GUI.VersionControl
                  , Lamdu.GUI.VersionControl.Config
                  , Lamdu.GUI.WidgetIdIRef
                  , Lamdu.GUI.WidgetIds
                  , Lamdu.Infer.Trans
                  , Lamdu.Main.Env
                  , Lamdu.Name
                  , Lamdu.Opts
                  , Lamdu.Paths
                  , Lamdu.Precedence
                  , Lamdu.Prelude
                  , Lamdu.Settings
                  , Lamdu.Style
                  , Lamdu.Sugar.Annotations
                  , Lamdu.Sugar.Convert
                  , Lamdu.Sugar.Convert.Apply
                  , Lamdu.Sugar.Convert.Binder
                  , Lamdu.Sugar.Convert.Binder.Float
                  , Lamdu.Sugar.Convert.Binder.Inline
                  , Lamdu.Sugar.Convert.Binder.Params
                  , Lamdu.Sugar.Convert.Binder.Redex
                  , Lamdu.Sugar.Convert.Binder.Types
                  , Lamdu.Sugar.Convert.Case
                  , Lamdu.Sugar.Convert.Composite
                  , Lamdu.Sugar.Convert.DefExpr
                  , Lamdu.Sugar.Convert.DefExpr.OutdatedDefs
                  , Lamdu.Sugar.Convert.Eval
                  , Lamdu.Sugar.Convert.Expression
                  , Lamdu.Sugar.Convert.Expression.Actions
                  , Lamdu.Sugar.Convert.Fragment
                  , Lamdu.Sugar.Convert.GetField
                  , Lamdu.Sugar.Convert.GetVar
                  , Lamdu.Sugar.Convert.IfElse
                  , Lamdu.Sugar.Convert.Hole
                  , Lamdu.Sugar.Convert.Hole.ResultScore
                  , Lamdu.Sugar.Convert.Hole.Suggest
                  , Lamdu.Sugar.Convert.Inject
                  , Lamdu.Sugar.Convert.Input
                  , Lamdu.Sugar.Convert.Load
                  , Lamdu.Sugar.Convert.Monad
                  , Lamdu.Sugar.Convert.Nominal
                  , Lamdu.Sugar.Convert.ParamList
                  , Lamdu.Sugar.Convert.PostProcess
                  , Lamdu.Sugar.Convert.Record
                  , Lamdu.Sugar.Convert.TId
                  , Lamdu.Sugar.Convert.Tag
                  , Lamdu.Sugar.Convert.Text
                  , Lamdu.Sugar.Convert.Type
                  , Lamdu.Sugar.EntityId
                  , Lamdu.Sugar.Internal
                  , Lamdu.Sugar.Internal.EntityId
                  , Lamdu.Sugar.Parens
                  , Lamdu.Sugar.Lens
                  , Lamdu.Sugar.Names.Add
                  , Lamdu.Sugar.Names.Annotated
                  , Lamdu.Sugar.Names.CPS
                  , Lamdu.Sugar.Names.Clash
                  , Lamdu.Sugar.Names.Map
                  , Lamdu.Sugar.Names.NameGen
                  , Lamdu.Sugar.Names.Walk
                  , Lamdu.Sugar.OrderTags
                  , Lamdu.Sugar.PresentationModes
                  , Lamdu.Sugar.Types
                  , Lamdu.Sugar.Types.Eval
                  , Lamdu.Sugar.Types.Expression
                  , Lamdu.Sugar.Types.GetVar
                  , Lamdu.Sugar.Types.Parts
                  , Lamdu.Sugar.Types.Simple
                  , Lamdu.Sugar.Types.Tag
                  , Lamdu.Sugar.Types.Type
                  , Lamdu.Themes
                  , Lamdu.VersionControl
                  , Lamdu.VersionControl.Actions
                  , Numeric.Extended
                  , Revision.Deltum.Db
                  , Revision.Deltum.IRef
                  , Revision.Deltum.Rev.Branch
                  , Revision.Deltum.Rev.Change
                  , Revision.Deltum.Rev.Version
                  , Revision.Deltum.Rev.View
                  , Revision.Deltum.Rev.ViewBranchInternal
                  , Revision.Deltum.Transaction
                  , System.Process.Utils
                  , System.Random.Extended
                  , System.Remote.Monitoring.Shim
                  , System.TimeIt.Pure

  other-modules:    Paths_Lamdu

  ghc-options:         -O2 -Wall -Widentities -Wimplicit-prelude -Wmissing-home-modules -Wincomplete-patterns -Wnoncanonical-monad-instances -Wsemigroup -Wincomplete-record-updates -Wredundant-constraints
  ghc-prof-options:    -fprof-auto -fprof-cafs
  if flag(ekg)
    cpp-options: -DWITH_EKG
    build-depends: ekg
