Name:                Lamdu
Version:             0.1
Synopsis:            A next generation IDE
Description:         Lamdu functional programming editor
License:             GPL
License-file:        LICENSE
Author:              Eyal Lotem, Yair Chuchem
Maintainer:          eyal.lotem@gmail.com, yairchu@gmail.com
Homepage:            http://www.lamdu.org
Category:            Graphics
Build-type:          Simple
Cabal-version:       >= 1.10
Data-dir:            data
Data-files:          config.json
                   , default-settings.json
                   , doc/JSExportReadMe.md
                   , fonts/DejaVuSans-Bold.ttf
                   , fonts/DejaVuSans-BoldOblique.ttf
                   , fonts/DejaVuSans-Oblique.ttf
                   , fonts/DejaVuSans.ttf
                   , fonts/DejaVuSansMono-Bold.ttf
                   , fonts/DejaVuSansMono-BoldOblique.ttf
                   , fonts/DejaVuSansMono-Oblique.ttf
                   , fonts/DejaVuSansMono.ttf
                   , fonts/DejaVuSerif-Bold.ttf
                   , fonts/DejaVuSerif-BoldItalic.ttf
                   , fonts/DejaVuSerif-Italic.ttf
                   , fonts/DejaVuSerif.ttf
                   , fonts/Purisa.ttf
                   , freshdb.json
                   , js/README
                   , js/anchors.js
                   , js/export/rtsConfig.js
                   , js/protocol.js
                   , js/rts.js
                   , js/rtsConfig.js
                   , languages/base.mixin.json
                   , languages/english.json
                   , languages/hebrew.json
                   , languages/italiano.json
                   , languages/left-to-right.mixin.json
                   , languages/right-to-left.mixin.json
                   , sprites/Credits.html
                   , sprites/earth-globe-world.png
                   , sprites/pencil-line.png
                   , sprites/theme.png
                   , themes/base.mixin.json
                   , themes/dark.json
                   , themes/light.json
                   , themes/retro.json

source-repository head
  type: git
  location: https://github.com/lamdu/lamdu.git

Flag ekg
  description: Enable ekg support in Lamdu
  default: False

Flag dev
  description: Build a dev version (faster build, no version output support)
  default: False

Executable migrate
  main-is: tools/migrate.hs
  build-depends: Lamdu, base, directory, aeson, filepath, aeson-pretty, bytestring
               , optparse-applicative >= 0.12
  default-extensions: NoImplicitPrelude, OverloadedStrings, LambdaCase
  default-language: Haskell2010

Executable lamdu
  main-is: Lamdu/Main.hs
  hs-source-dirs: src/main
  default-extensions: NoImplicitPrelude, OverloadedStrings, PartialTypeSignatures, LambdaCase, DeriveTraversable, DeriveGeneric, DeriveAnyClass, DerivingStrategies, FlexibleContexts
  default-language: Haskell2010
  build-depends: Lamdu, base, directory, process, template-haskell, time, base-compat
  ghc-options: -rtsopts -with-rtsopts=-A128M -O2 -Wall -Wno-partial-type-signatures -Widentities -Wimplicit-prelude -Wmissing-home-modules -Wincomplete-patterns -Wnoncanonical-monad-instances -Wsemigroup -Wincomplete-record-updates -Wredundant-constraints -threaded
  ghc-prof-options: -fprof-auto -fprof-cafs -rtsopts
  if flag(ekg)
    ghc-options: -with-rtsopts=-T
  other-modules: Lamdu.Version
               , System.Process.Git
  if flag(dev)
    cpp-options: -DDEV_BUILD

Test-Suite Tests
  type: exitcode-stdio-1.0
  default-extensions: NoImplicitPrelude, OverloadedStrings, PartialTypeSignatures, LambdaCase, DeriveTraversable, DeriveGeneric, DeriveAnyClass, DerivingStrategies, FlexibleContexts, TypeOperators
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Tests.hs
  other-modules: Test.Lamdu.Code
               , Test.Lamdu.Config
               , Test.Lamdu.Db
               , Test.Lamdu.Env
               , Test.Lamdu.Exec
               , Test.Lamdu.FreshDb
               , Test.Lamdu.Gui
               , Test.Lamdu.Instances
               , Test.Lamdu.Prelude
               , Test.Lamdu.Sugar
               , Test.Lamdu.SugarStubs
               , Tests.AnimIdClash
               , Tests.Codec
               , Tests.ColorSchemes
               , Tests.Config
               , Tests.DataFiles
               , Tests.EventMap
               , Tests.FuzzySearch
               , Tests.Gui
               , Tests.JsExport
               , Tests.JsRtsTags
               , Tests.Names
               , Tests.Nix
               , Tests.Precedence
               , Tests.Readme
               , Tests.Stdlib
               , Tests.Sugar
  build-depends:
      base, HUnit, aeson-diff, deepseq, lens-aeson, split, yaml
    , Lamdu, lamdu-calculus, momentu, hypertypes, nodejs-exec
    , aeson, aeson-pretty, bytestring, containers, directory, filepath, GLFW-b
    , lens, List, mtl, pretty, process, random, text, uuid-types, Cabal
    , test-framework, test-framework-hunit
  ghc-options: -O0 -Wall -Wno-partial-type-signatures -Widentities -Wimplicit-prelude -Wmissing-home-modules -Wincomplete-patterns -Wnoncanonical-monad-instances -Wsemigroup -Wincomplete-record-updates -Wredundant-constraints -threaded
  ghc-prof-options: -fprof-auto -fprof-cafs -rtsopts

Library
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude, OverloadedStrings, PartialTypeSignatures, LambdaCase, DeriveTraversable, DeriveGeneric, DeriveAnyClass, DerivingStrategies, FlexibleContexts, TypeOperators
  build-depends:    aeson >= 1.1
                  , aeson-diff
                  , aeson-pretty
                  , ansi-wl-pprint
                  , base >= 4.12
                  , base-compat >= 0.8.2 && < 0.12
                  , base16-bytestring >=1
                  , binary >= 0.7
                  , bytestring
                  , containers >= 0.4
                  , constraints
                  , data-default >= 0.5
                  , deepseq
                  , directory >= 1.0.1.1
                  , ekg-core
                  , filepath >= 1.1
                  , edit-distance
                  , generic-data >= 0.7
                  , GLFW-b >= 3.3.0.0 && < 3.4
                  , graphics-drawingcombinators >= 1.7.1
                  , hashable
                  , lamdu-calculus >= 0.2
                  , language-ecmascript >= 0.18
                  , lattices
                  , lens >= 4.18
                  , lens-aeson
                  , leveldb-haskell >= 0.6
                  , List >= 0.5.1
                  , momentu
                  , mtl >= 2.2
                  , nodejs-exec >= 0.2
                  , OpenGL
                  , optparse-applicative >= 0.12
                  , pretty >=1.1.2 && <1.2
                  , process
                  , random >= 1.0.0
                  , safe-exceptions >= 0.1.4
                  , split
                  , StateVar
                  , hypertypes
                  , template-haskell
                  , temporary
                  , text
                  , time >= 1.2
                  , timeit
                  , transformers >= 0.4.3
                  , unicode-properties
                  , unordered-containers
                  , uuid >= 1.3
                  , uuid-types >= 1.0
                  , vector
                  , zip-archive
                  , cryptohash-sha256
                  , executable-path

  exposed-modules:  Control.Lens.Extended
                  , Control.Monad.Once
                  , Control.Monad.Trans.Except.Extended
                  , Control.Monad.Trans.FastRWS
                  , Control.Monad.Trans.FastWriter
                  , Control.Monad.Transaction
                  , Control.Monad.Unit
                  , Data.Aeson.Config
                  , Data.Cache.Fenced
                  , Data.CurAndPrev
                  , Data.IORef.Extended
                  , Data.MMap
                  , Data.Map.Extended
                  , Data.Set.Ordered
                  , Data.UUID.Utils
                  , Lamdu.Annotations
                  , Lamdu.Builtins.Anchors
                  , Lamdu.Builtins.PrimVal
                  , Lamdu.Cache
                  , Lamdu.Calc.Term.Utils
                  , Lamdu.CharClassification
                  , Lamdu.Config
                  , Lamdu.Config.Folder
                  , Lamdu.Config.Sampler
                  , Lamdu.Config.Theme
                  , Lamdu.Config.Theme.Fonts
                  , Lamdu.Config.Theme.Name
                  , Lamdu.Config.Theme.Sprites
                  , Lamdu.Config.Theme.TextColors
                  , Lamdu.Config.Theme.ValAnnotation
                  , Lamdu.Data.Anchors
                  , Lamdu.Data.Db
                  , Lamdu.Data.Db.Init
                  , Lamdu.Data.Db.Layout
                  , Lamdu.Data.Db.Migration
                  , Lamdu.Data.Definition
                  , Lamdu.Data.Export.JS
                  , Lamdu.Data.Export.JSON
                  , Lamdu.Data.Export.JSON.Codec
                  , Lamdu.Data.Export.JSON.Migration
                  , Lamdu.Data.Export.JSON.Migration.Common
                  , Lamdu.Data.Export.JSON.Migration.ToVersion1
                  , Lamdu.Data.Export.JSON.Migration.ToVersion2
                  , Lamdu.Data.Export.JSON.Migration.ToVersion3
                  , Lamdu.Data.Export.JSON.Migration.ToVersion4
                  , Lamdu.Data.Export.JSON.Migration.ToVersion5
                  , Lamdu.Data.Export.JSON.Migration.ToVersion6
                  , Lamdu.Data.Export.JSON.Migration.ToVersion7
                  , Lamdu.Data.Export.JSON.Migration.ToVersion8
                  , Lamdu.Data.Export.JSON.Migration.ToVersion9
                  , Lamdu.Data.Export.JSON.Migration.ToVersion10
                  , Lamdu.Data.Export.JSON.Migration.ToVersion11
                  , Lamdu.Data.Export.JSON.Migration.ToVersion12
                  , Lamdu.Data.Export.JSON.Migration.ToVersion13
                  , Lamdu.Data.Export.JSON.Migration.ToVersion14
                  , Lamdu.Data.Meta
                  , Lamdu.Data.Ops
                  , Lamdu.Data.Ops.Subexprs
                  , Lamdu.Data.Tag
                  , Lamdu.Debug
                  , Lamdu.Debug.Tasks
                  , Lamdu.Editor
                  , Lamdu.Editor.Exports
                  , Lamdu.Editor.Fonts
                  , Lamdu.Editor.Settings
                  , Lamdu.Eval.JS
                  , Lamdu.Eval.JS.Compiler
                  , Lamdu.Eval.JS.Types
                  , Lamdu.Eval.Manager
                  , Lamdu.Eval.Results
                  , Lamdu.Eval.Results.Process
                  , Lamdu.Expr.IRef
                  , Lamdu.Expr.Load
                  , Lamdu.Expr.UniqueId
                  , Lamdu.Font
                  , Lamdu.Formatting
                  , Lamdu.Fuzzy
                  , Lamdu.GUI.CodeEdit
                  , Lamdu.GUI.CodeEdit.GotoDefinition
                  , Lamdu.GUI.DefinitionEdit
                  , Lamdu.GUI.EvalView
                  , Lamdu.GUI.Expr
                  , Lamdu.GUI.Expr.ApplyEdit
                  , Lamdu.GUI.Expr.AssignmentEdit
                  , Lamdu.GUI.Expr.BinderEdit
                  , Lamdu.GUI.Expr.BuiltinEdit
                  , Lamdu.GUI.Expr.CaseEdit
                  , Lamdu.GUI.Expr.EventMap
                  , Lamdu.GUI.Expr.FragmentEdit
                  , Lamdu.GUI.Expr.GetFieldEdit
                  , Lamdu.GUI.Expr.GetVarEdit
                  , Lamdu.GUI.Expr.IfElseEdit
                  , Lamdu.GUI.Expr.HoleEdit
                  , Lamdu.GUI.Expr.InjectEdit
                  , Lamdu.GUI.Expr.LambdaEdit
                  , Lamdu.GUI.Expr.LiteralEdit
                  , Lamdu.GUI.Expr.NominalEdit
                  , Lamdu.GUI.Expr.RecordEdit
                  , Lamdu.GUI.Expr.TagEdit
                  , Lamdu.GUI.Annotation
                  , Lamdu.GUI.IOTrans
                  , Lamdu.GUI.LightLambda
                  , Lamdu.GUI.Main
                  , Lamdu.GUI.Monad
                  , Lamdu.GUI.NameView
                  , Lamdu.GUI.ParamEdit
                  , Lamdu.GUI.PresentationModeEdit
                  , Lamdu.GUI.ReplEdit
                  , Lamdu.GUI.Settings
                  , Lamdu.GUI.StatusBar
                  , Lamdu.GUI.StatusBar.Common
                  , Lamdu.GUI.Styled
                  , Lamdu.GUI.TagPane
                  , Lamdu.GUI.TagView
                  , Lamdu.GUI.TypeView
                  , Lamdu.GUI.Types
                  , Lamdu.GUI.VersionControl
                  , Lamdu.GUI.VersionControl.Config
                  , Lamdu.GUI.WidgetIdIRef
                  , Lamdu.GUI.WidgetIds
                  , Lamdu.GUI.Wrap
                  , Lamdu.I18N.Code
                  , Lamdu.I18N.CodeUI
                  , Lamdu.I18N.Collaboration
                  , Lamdu.I18N.Definitions
                  , Lamdu.I18N.Fonts
                  , Lamdu.I18N.Language
                  , Lamdu.I18N.LangId
                  , Lamdu.I18N.Name
                  , Lamdu.I18N.Navigation
                  , Lamdu.I18N.StatusBar
                  , Lamdu.I18N.Texts
                  , Lamdu.I18N.Versioning
                  , Lamdu.Main.Env
                  , Lamdu.Name
                  , Lamdu.Opts
                  , Lamdu.Paths
                  , Lamdu.Precedence
                  , Lamdu.Prelude
                  , Lamdu.Settings
                  , Lamdu.Style
                  , Lamdu.Style.Make
                  , Lamdu.Sugar
                  , Lamdu.Sugar.Annotations
                  , Lamdu.Sugar.Config
                  , Lamdu.Sugar.Convert
                  , Lamdu.Sugar.Convert.Apply
                  , Lamdu.Sugar.Convert.Binder
                  , Lamdu.Sugar.Convert.Binder.Float
                  , Lamdu.Sugar.Convert.Binder.Inline
                  , Lamdu.Sugar.Convert.Binder.Params
                  , Lamdu.Sugar.Convert.Binder.Redex
                  , Lamdu.Sugar.Convert.Binder.Types
                  , Lamdu.Sugar.Convert.Case
                  , Lamdu.Sugar.Convert.Composite
                  , Lamdu.Sugar.Convert.DefExpr
                  , Lamdu.Sugar.Convert.DefExpr.OutdatedDefs
                  , Lamdu.Sugar.Convert.Eval
                  , Lamdu.Sugar.Convert.Expression
                  , Lamdu.Sugar.Convert.Expression.Actions
                  , Lamdu.Sugar.Convert.Fragment
                  , Lamdu.Sugar.Convert.Fragment.Heal
                  , Lamdu.Sugar.Convert.GetField
                  , Lamdu.Sugar.Convert.GetVar
                  , Lamdu.Sugar.Convert.IfElse
                  , Lamdu.Sugar.Convert.Hole
                  , Lamdu.Sugar.Convert.Inject
                  , Lamdu.Sugar.Convert.Input
                  , Lamdu.Sugar.Convert.Load
                  , Lamdu.Sugar.Convert.Monad
                  , Lamdu.Sugar.Convert.Nominal
                  , Lamdu.Sugar.Convert.PostProcess
                  , Lamdu.Sugar.Convert.Record
                  , Lamdu.Sugar.Convert.TId
                  , Lamdu.Sugar.Convert.Tag
                  , Lamdu.Sugar.Convert.Text
                  , Lamdu.Sugar.Convert.Type
                  , Lamdu.Sugar.EntityId
                  , Lamdu.Sugar.Eval
                  , Lamdu.Sugar.Internal
                  , Lamdu.Sugar.Internal.EntityId
                  , Lamdu.Sugar.Parens
                  , Lamdu.Sugar.Lens
                  , Lamdu.Sugar.Names.Add
                  , Lamdu.Sugar.Names.Annotated
                  , Lamdu.Sugar.Names.CPS
                  , Lamdu.Sugar.Names.Clash
                  , Lamdu.Sugar.Names.Walk
                  , Lamdu.Sugar.OrderTags
                  , Lamdu.Sugar.PresentationModes
                  , Lamdu.Sugar.Types
                  , Lamdu.Sugar.Types.Eval
                  , Lamdu.Sugar.Types.Expression
                  , Lamdu.Sugar.Types.GetVar
                  , Lamdu.Sugar.Types.Parts
                  , Lamdu.Sugar.Types.Tag
                  , Lamdu.Sugar.Types.Type
                  , Lamdu.VersionControl
                  , Lamdu.VersionControl.Actions
                  , Revision.Deltum.Db
                  , Revision.Deltum.Hyper
                  , Revision.Deltum.IRef
                  , Revision.Deltum.Rev.Branch
                  , Revision.Deltum.Rev.Change
                  , Revision.Deltum.Rev.Version
                  , Revision.Deltum.Rev.View
                  , Revision.Deltum.Rev.ViewBranchInternal
                  , Revision.Deltum.Transaction
                  , System.Process.Utils
                  , System.Remote.Monitoring.Shim
                  , System.TimeIt.Pure

  other-modules:    Paths_Lamdu

  ghc-options:         -O2 -Wall -Wno-partial-type-signatures -Widentities -Wimplicit-prelude -Wmissing-home-modules -Wincomplete-patterns -Wnoncanonical-monad-instances -Wsemigroup -Wincomplete-record-updates -Wredundant-constraints
  ghc-prof-options:    -fprof-auto -fprof-cafs
  if flag(ekg)
    cpp-options: -DWITH_EKG
  if flag(ekg)
    build-depends: ekg
